force-app/main/default/objects/CoverageBenefit__c/CoverageBenefit__c.object-meta.xml
<CustomObject>
    <label>CoverageBenefit</label>
    <nameField>
        <label>CoverageBenefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CoverageBenefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>