force-app/main/default/objects/CoverageBenefit__c/fields/CareBenefitVerifyRequest__c.field-meta.xml
<CustomField>
    <fullName>CareBenefitVerifyRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareBenefitVerifyRequest</label>
    <referenceTo>CareBenefitVerifyRequest__c</referenceTo>
    <relationshipLabel>CoverageBenefits</relationshipLabel>
    <relationshipName>CoverageBenefits</relationshipName>
    <type>Lookup</type>
</CustomField>