force-app/main/default/objects/CoverageBenefit__c/fields/External_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Request_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Request Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>