force-app/main/default/objects/CoverageBenefit__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Message from API</description>
    <label>Status Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>